# fltk

./: .bazelignore  .gitignore  .style.yapf  BUILD.bazel  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MODULE.bazel  Makefile  README.md  TODO.md  bootstrap2gsm.py  bootstrap_cst.py  bootstrap_parser.py  coverage-html.py  deny.toml  fltk2gsm.py  fltk_cst.py  fltk_parser.py  fltk_trivia_parser.py  genparser.py  pyproject.toml  pytest.ini  requirements.in  requirements_lock.txt  requirements_lock_3_10.txt  rules.bzl  runbs.py  rust-toolchain.toml  rust.bzl
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/fegen-rust/: Cargo.toml
crates/fltk-cst-core/: BUILD.bazel  Cargo.toml
crates/fltk-cst-core/src/: cross_cdylib.rs  error.rs  escape.rs  lib.rs  py_module.rs  registry.rs  shared.rs  span.rs
crates/fltk-cst-spike/: Cargo.toml
crates/fltk-cst-spike/benches/: traverse.rs
crates/fltk-cst-spike/src/: cst.rs  lib.rs  spike_tests.rs
crates/fltk-fmt-cli/: Cargo.toml
crates/fltk-fmt-cli/src/: lib.rs
crates/fltk-parser-core/: BUILD.bazel  Cargo.toml
crates/fltk-parser-core/src/: errors.rs  lib.rs  memo.rs  terminalsrc.rs
crates/fltk-parser-core/tests/: memo_toy.rs
crates/fltk-unparser-core/: Cargo.toml
crates/fltkfmt/: Cargo.toml
crates/fltkfmt/src/: main.rs
crates/fltkfmt/tests/: cli.rs
docs/: blocked-todo-burndown-workflow.md  cst-structure.md  fltk-grammar-reference.md  format-specs.md  grammar-syntax.md  lsp.md  rust-cst-extension-guide.md  rust-formatter-guide.md  rust-python-parser-design.md  rust-python-parser-examples.md  rust-python-parser-implementation-guide.md  trivia-guide.md  usage.md
docs/workflow-bazel-protocol/: design-eli5.md  design.md  dispositions-deep.md  dispositions-design.md  dispositions-prepass.md  dispositions-requirements.md  exploration.md  implementation-log.md  judge-verdict-deep.md  judge-verdict-design.md  judge-verdict-prepass.md  judge-verdict-requirements.md  notes-deep-correctness-reviewer.md  notes-deep-efficiency-reviewer.md  notes-deep-error-handling-reviewer.md  notes-deep-quality-reviewer.md  notes-deep-reuse-reviewer.md  notes-deep-security-reviewer.md  notes-deep-test-reviewer.md  notes-design-design-reviewer.md  notes-prepass-scope.md  notes-requirements-requirements-reviewer.md  requirements.md
editors/vscode/: .gitignore  README.md  extension.js  language-configuration-fltkg.json  package.json
examples/gear/: README.md  gear.fltkfmt  gear.fltkg  gear.fltklsp  gear_resolver.py  package-lock.json
fltk/: dchelpers.py  plumbing.py  plumbing_types.py  pygen.py  test_plumbing.py  test_plumbing_integration.py  unparse_cli.py
fltk/_native/: __init__.pyi  fegen_cst.pyi
fltk/fegen/: bootstrap.fltkg  bootstrap.py  bootstrap2gsm.py  bootstrap_cst.py  bootstrap_cst_protocol.py  bootstrap_parser.py  bootstrap_trivia_parser.py  fegen.fltkfmt  fegen.fltkg  fegen.fltklsp  fltk.fltkg  fltk2gsm.py  fltk_cst.py  fltk_cst_protocol.py  fltk_parser.py  fltk_trivia_parser.py  genparser.py  gsm.py  gsm2lib_rs.py  gsm2parser.py  gsm2parser_rs.py  gsm2tree.py  gsm2tree_rs.py  naming.py  notes.adoc  regex.fltkg  regex_corpus.py  regex_cst.py  regex_cst_protocol.py  regex_parser.py  regex_portability.py  regex_trivia_parser.py  test_cst_protocol.py  test_genparser.py  test_grammar_trivia_discovery.py  test_gsm2lib_rs.py  test_gsm2parser.py  test_gsm2parser_rs.py  test_gsm2tree.py  test_leading_separators.py  (+12 more)
fltk/iir/: context.py  model.py  test_context.py  typemodel.py
fltk/lsp/: analysis.py  classify.py  conftest.py  engine.py  features.py  fltklsp.fltkfmt  fltklsp.fltkg  fltklsp.fltklsp  fltklsp_cst.py  fltklsp_cst_protocol.py  fltklsp_parser.py  fltklsp_trivia_parser.py  grammar_cli.py  highlight_cli.py  lsp_config.py  positions.py  project.py  resolver.py  server.py  server_cli.py  symbols.py  test_analysis.py  test_classify.py  test_classify_painter.py  test_dogfood.py  test_engine.py  test_engine_analyze.py  test_features.py  test_fltklsp_parse.py  test_gear_demo.py  test_grammar_index.py  test_grammar_lsp.py  test_highlight_cli.py  test_load_lsp_config.py  test_lsp_config.py  test_lsp_resolve.py  test_lsp_validation.py  (+10 more)
projects/: README.md
src/: cst_fegen.rs  cst_generated.rs  cst_poc.rs  lib.rs  span.rs
tests/: gsm2tree_helpers.py  parser_parity.py  pyright_test_utils.py  rust_parser_fixture_cst_protocol.py  test_clean_protocol_consumer_api.py  test_cross_backend_label_equality.py  test_cst_mutators_identity.py  test_cst_mutators_parity.py  test_error_formatter.py  test_fegen_rust_cst.py  test_fltk_native_stub.py  test_fltkfmt_parity.py  test_gsm2tree_py.py  test_gsm2tree_rs.py  test_gsm_walk.py  test_module_split.py  test_naming.py  test_native.py  test_nullable_loop_guard.py  test_phase4_fegen_rust_backend.py  test_phase4_rust_fixture.py  test_pyrt_errors.py  test_python_parser_span_backend.py  test_regex_grammar_adversarial.py  test_regex_grammar_corpus.py  test_regex_portability.py  test_registry_gc_eviction.py  test_rust_cst_poc.py  test_rust_parser_bindings.py  test_rust_parser_fixture_bindings.py  test_rust_parser_parity_fegen.py  test_rust_parser_parity_fixture.py  test_rust_span.py  test_rust_unparser_generator.py  test_rust_unparser_none_path_diagnostics.py  test_rust_unparser_parity_fixture.py  test_rust_unparser_pyi.py  test_span.py  test_span_protocol.py  typecheck_fegen_cst_conformance.py  (+1 more)
tests/bazel_consumer/: BUILD.bazel  MODULE.bazel  consumer.fltkg  consumer_python_test.py  consumer_rust_test.py
tests/bazel_rules/: BUILD.bazel  dummy.fltkg  rust_bzl_tests.bzl
tests/rust_cst_fegen/: Cargo.toml
tests/rust_cst_fegen/src/: cst.rs  lib.rs  parser.rs
tests/rust_cst_fixture/: Cargo.toml
tests/rust_cst_fixture/src/: cst.rs  lib.rs  native_tests.rs  registry_introspection.rs
tests/rust_parser_fixture/: Cargo.toml
tests/rust_parser_fixture/src/: collision_cst.rs  collision_parser.rs  cst.rs  lib.rs  native_tests.rs  parser.rs  unparser.rs  unparser_default.rs
tests/rust_poc_cst/: Cargo.toml
tests/rust_poc_cst/src/: lib.rs  spike_tests.rs
(+1864 files in other folders)
