load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_python//python/uv:lock.bzl", "lock")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("//:rules.bzl", "generate_parser")
load("//:rust.bzl", "fltk_pyo3_cdylib", "generate_rust_parser")

lock(
    name = "requirements",
    srcs = ["pyproject.toml"],
    out = "requirements_lock.txt",
)

py_binary(
    name = "genparser",
    srcs = ["fltk/fegen/genparser.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":fltk",
        "@pypi//astor",
        "@pypi//typer",
    ],
)

py_library(
    name = "fltk",
    srcs = glob(["**/*.py"]),
    data = ["fltk/py.typed"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

# fltk._native cdylib — the Rust extension that provides the canonical Span/SourceText types.
# Consumers should depend on :native_py (the py_library wrapper) rather than this target directly.
rust_shared_library(
    name = "native",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "fltk_native",
    # "extension-module" enables pyo3's no-libpython-link mode (required for cdylibs).
    # "python" must be set explicitly: Span/SourceText pyclass registration in
    # fltk-cst-core is gated on #[cfg(feature = "python")] and is compiled out without it.
    # Cargo would forward "python" via fltk-cst-core's feature definition, but Bazel
    # crate_features do not forward transitively — each must be stated explicitly.
    crate_features = [
        "extension-module",
        "python",
    ],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/fltk-cst-core",
        "@fltk_crates//:pyo3",
    ],
)

# Rename libfltk_native.so -> fltk/_native.abi3.so so that `import fltk._native` resolves.
# rules_rust produces lib<crate_name>.so; the abi3 suffix is the maturin convention for
# CPython 3.10+ ABI-stable extensions and is what CPython expects for a stable-ABI cdylib.
# Use $(location :native) rather than $< to avoid positional ambiguity if rules_rust
# ever emits additional files alongside the .so (e.g. debug info).
genrule(
    name = "native_so",
    srcs = [":native"],
    outs = ["fltk/_native.abi3.so"],
    cmd = "cp $(location :native) $@",
)

# py_library wrapper: puts fltk/_native.abi3.so on the Python path so that
# `import fltk._native` succeeds in any target that depends on :native_py.
# Consumers may depend on both :fltk and :native_py to get the full runtime.
py_library(
    name = "native_py",
    data = [":native_so"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

# Test targets for Bazel rules
generate_parser(
    name = "bootstrap_both",
    src = "fltk/fegen/bootstrap.fltkg",
    base_name = "bootstrap_test",
    cst_mod_path = "bootstrap_test.cst",
)

generate_parser(
    name = "bootstrap_trivia_only",
    src = "fltk/fegen/bootstrap.fltkg", 
    base_name = "bootstrap_trivia",
    cst_mod_path = "bootstrap_trivia.cst",
    trivia_only = True,
)

generate_parser(
    name = "bootstrap_no_trivia_only",
    src = "fltk/fegen/bootstrap.fltkg",
    base_name = "bootstrap_clean", 
    cst_mod_path = "bootstrap_clean.cst",
    no_trivia_only = True,
)

generate_parser(
    name = "fegen_full",
    src = "fltk/fegen/fegen.fltkg",
    base_name = "fegen_test",
    cst_mod_path = "fegen_test.cst",
)

# Smoke test for generate_rust_parser rule: verifies FLTK's own Bazel surface
# for Rust codegen works against a fixture grammar (analogous to the generate_parser
# smoke targets above). This covers FLTK CI independent of Clockwork (design §5.4).
generate_rust_parser(
    name = "bootstrap_rust_srcs",
    src = "fltk/fegen/bootstrap.fltkg",
    # default cst_mod_path = "super::cst" is correct for fltk_pyo3_cdylib usage
)

# Smoke target for fltk_pyo3_cdylib without a hand-written lib_rs: verifies the
# no-lib_rs branch of the macro (generate_rust_lib rule + crate assembly + cdylib
# compilation + abi3 rename + py_library) independent of Clockwork.
# Uses bootstrap_rust_srcs so no extra grammar file is needed.
fltk_pyo3_cdylib(
    name = "bootstrap_native",
    rs_srcs = ":bootstrap_rust_srcs",
    # lib_rs omitted: the macro generates lib.rs from name="bootstrap_native"
    # via generate_rust_lib --module-name bootstrap_native.
)
