load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_python//python/uv:lock.bzl", "lock")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("//:rules.bzl", "generate_parser")
load("//:rust.bzl", "generate_rust_parser")

lock(
    name = "requirements",
    srcs = ["pyproject.toml"],
    out = "requirements_lock.txt",
)

py_binary(
    name = "genparser",
    srcs = ["fltk/fegen/genparser.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":fltk",
        "@pypi//astor",
        "@pypi//typer",
    ],
)

py_library(
    name = "fltk",
    srcs = glob(["**/*.py"]),
    data = ["fltk/py.typed"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

# fltk._native cdylib — the Rust extension that provides the canonical Span/SourceText types.
# Consumers should depend on :native_py (the py_library wrapper) rather than this target directly.
rust_shared_library(
    name = "native",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "fltk_native",
    # "extension-module" enables pyo3's no-libpython-link mode (required for cdylibs).
    # "python" must be set explicitly: Span/SourceText pyclass registration in
    # fltk-cst-core is gated on #[cfg(feature = "python")] and is compiled out without it.
    # Cargo would forward "python" via fltk-cst-core's feature definition, but Bazel
    # crate_features do not forward transitively — each must be stated explicitly.
    crate_features = [
        "extension-module",
        "python",
    ],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/fltk-cst-core",
        "@fltk_crates//:pyo3",
    ],
)

# Rename libfltk_native.so -> fltk/_native.abi3.so so that `import fltk._native` resolves.
# rules_rust produces lib<crate_name>.so; the abi3 suffix is the maturin convention for
# CPython 3.10+ ABI-stable extensions and is what CPython expects for a stable-ABI cdylib.
# Use $(location :native) rather than $< to avoid positional ambiguity if rules_rust
# ever emits additional files alongside the .so (e.g. debug info).
genrule(
    name = "native_so",
    srcs = [":native"],
    outs = ["fltk/_native.abi3.so"],
    cmd = "cp $(location :native) $@",
)

# py_library wrapper: puts fltk/_native.abi3.so on the Python path so that
# `import fltk._native` succeeds in any target that depends on :native_py.
# Consumers may depend on both :fltk and :native_py to get the full runtime.
py_library(
    name = "native_py",
    data = [":native_so"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

# Test targets for Bazel rules
generate_parser(
    name = "bootstrap_both",
    src = "fltk/fegen/bootstrap.fltkg",
    base_name = "bootstrap_test",
    cst_mod_path = "bootstrap_test.cst",
)

generate_parser(
    name = "bootstrap_trivia_only",
    src = "fltk/fegen/bootstrap.fltkg", 
    base_name = "bootstrap_trivia",
    cst_mod_path = "bootstrap_trivia.cst",
    trivia_only = True,
)

generate_parser(
    name = "bootstrap_no_trivia_only",
    src = "fltk/fegen/bootstrap.fltkg",
    base_name = "bootstrap_clean", 
    cst_mod_path = "bootstrap_clean.cst",
    no_trivia_only = True,
)

generate_parser(
    name = "fegen_full",
    src = "fltk/fegen/fegen.fltkg",
    base_name = "fegen_test",
    cst_mod_path = "fegen_test.cst",
)

# Pure-Rust smoke target for the generate_rust_parser macro (python_extension =
# False): verifies FLTK's own Bazel surface for Rust codegen works against a
# fixture grammar, emitting only bootstrap_rust_srcs/cst.rs and
# bootstrap_rust_srcs/parser.rs (no cdylib, no .pyi). Covers FLTK CI independent
# of Clockwork. Uses rust_parser_fixture.fltkg (fully within the Rust backend's
# portable subset) so `bazel build //:bootstrap_rust_srcs` succeeds end-to-end.
generate_rust_parser(
    name = "bootstrap_rust_srcs",
    src = "fltk/fegen/test_data/rust_parser_fixture.fltkg",
    # default cst_mod_path = "super::cst"; python_extension defaults to False
)

# Python-extension smoke target for the generate_rust_parser macro
# (python_extension = True) exercising the full Python path — crate assembly +
# rust_shared_library cdylib + abi3 rename + py_library — AND stub-package
# emission (protocol_module + protocol), which no other in-tree target does. This
# is the active regression guard for the stub-dir naming bug: the stub package
# must materialize at bootstrap_native/cst.pyi and bootstrap_native/__init__.pyi
# (named after the macro `name`, i.e. the compiled module). lib_rs omitted: the
# macro generates lib.rs from name="bootstrap_native" via generate_rust_lib.
# Uses rust_parser_fixture.fltkg (fully Rust-compilable) so the full target
# builds end-to-end, not just the stub half.
generate_rust_parser(
    name = "bootstrap_native",
    src = "fltk/fegen/test_data/rust_parser_fixture.fltkg",
    python_extension = True,
    protocol_module = "bootstrap_native.cst_protocol",
    protocol = True,
)

# TODO(bazel-neg-test-harness): the generate_rust_parser macro's six pure-Rust
# misconfiguration fail() guards (and the protocol/protocol_module coupling) are
# only verified manually today (no bazel_skylib analysistest dep in MODULE.bazel).
# Intentionally-failing targets cannot live here — they would break `bazel build
# //...`. Add an analysistest harness that asserts analysis failure per guard.
