[workspace]
members = [".", "crates/fltk-cst-core", "crates/fltk-cst-spike", "crates/fltk-parser-core"]
resolver = "2"

[package]
name = "fltk-native"
version = "0.2.0"
edition = "2021"
# Ships to PyPI via maturin, not crates.io. Guards against accidental `cargo publish`
# and exempts this crate from cargo-deny license enforcement ([licenses.private]).
publish = false

[lib]
name = "fltk_native"
crate-type = ["cdylib"]

[features]
default = ["extension-module"]
extension-module = ["python", "pyo3/extension-module"]
python = ["fltk-cst-core/python"]
test-introspection = ["python", "fltk-cst-core/test-introspection"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py310"] }
fltk-cst-core = { path = "crates/fltk-cst-core", default-features = false }
