module(
    name = "fltk",
)

bazel_dep(name = "rules_python", version = "1.5.0")
bazel_dep(name = "rules_rust", version = "0.70.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")

# Third-party Rust dependencies (pyo3, regex-automata, and transitive graph).
# This hub is module-private: FLTK's macros reference it as internal labels.
# Clockwork and other consumers do NOT need a use_repo for this hub.
#
# Membership note: `from_cargo` seeds from the workspace root Cargo.toml, whose
# [workspace] members include ".", "crates/fltk-cst-core", and "crates/fltk-parser-core".
# The tests/* fixture crates have their own [workspace] declarations and are excluded.
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "fltk_crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//crates/fltk-cst-core:Cargo.toml",
        "//crates/fltk-parser-core:Cargo.toml",
    ],
)
use_repo(crate, "fltk_crates")
