module(
    name = "fltk",
)

bazel_dep(name = "rules_python", version = "1.5.0")
bazel_dep(name = "rules_rust", version = "0.70.0")

# Test-only: the skylib unittest/analysistest harness backs //tests/bazel_rules'
# regression coverage of generate_rust_parser's misconfiguration guards.
# dev_dependency = True keeps skylib out of downstream consumers' module graphs;
# rust.bzl / rules.bzl (the files consumers load) must never load skylib.
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)

# Rust toolchain for the Bazel lane.  Without this tag rules_rust supplies its own
# default version, so Bazel and cargo would compile the same source with different
# compilers.  bzlmod cannot read TOML, so the pin is mirrored here; the sync guard
# that both Bazel check steps depend on (`make bazel-toolchain-guard`) fails if the
# two ever drift apart.
#
# MUST match `channel` in rust-toolchain.toml (the single source of truth).
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.97.1"],
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")

# Third-party Rust dependencies (pyo3, regex-automata, and transitive graph).
# This hub is module-private: FLTK's macros reference it as internal labels.
# Clockwork and other consumers do NOT need a use_repo for this hub.
#
# Membership note: `from_cargo` seeds from the workspace root Cargo.toml, whose
# [workspace] members include ".", "crates/fltk-cst-core", and "crates/fltk-parser-core".
# The tests/* fixture crates have their own [workspace] declarations and are excluded.
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "fltk_crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//crates/fltk-cst-core:Cargo.toml",
        "//crates/fltk-parser-core:Cargo.toml",
    ],
)
use_repo(crate, "fltk_crates")
