[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fltk"
dynamic = []
description = 'Formal Language ToolKit'
version = "0.1.1"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Randall Nortman", email = "github@randallnortman.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["astor", "typer"]

[tool.setuptools]
packages = ["fltk"]

[project.urls]
Documentation = "https://github.com/rnortman/fltk#readme"
Issues = "https://github.com/rnortman/fltk/issues"
Source = "https://github.com/rnortman/fltk"

[dependency-groups]
test = [
  "coverage[toml]>=6.5",
  "pytest",
]
lint = [
  "pyright>=1.1.0",
  "ruff>=0.0.243",
]

[tool.pyright]
pythonVersion = "3.10"
include = ["fltk", "*.py"]
exclude = ["**/__pycache__"]
stubPath = ""
venvPath = ".venv"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["fltk"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"**/test_*.py" = ["PLR2004", "S101", "TID252"]
# CLI files can use boolean arguments as they are command-line options
"genparser.py" = ["FBT002"]

[tool.coverage.run]
source_pkgs = ["fltk"]
branch = true
omit = [
  "src/fltk/__about__.py",
]

[tool.coverage.paths]
fltk = ["fltk", "*/fltk/src/fltk"]
tests = ["fltk", "*/fltk"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
