[package]
name = "fltk-cst-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "fltk_cst_core"
crate-type = ["rlib"]

# pyo3 WITHOUT extension-module: allows #[pyclass]/#[pymethods] for Python bindings
# but does NOT activate libpython linkage. This is intentional — downstream cdylib crates
# that depend on fltk-cst-core must NOT activate extension-module here, or they get a
# double-init pyo3 symbol conflict. Downstream crates depend with default-features = false.
[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310"] }
