[package]
name = "fltk-cst-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "fltk_cst_core"
crate-type = ["rlib"]

# `python` feature (default-on): activates pyo3 linkage, #[pyclass]/#[pymethods], and
# cross-cdylib helpers. Downstream cdylib crates depend with `default-features = false`
# and re-enable via a forwarding feature (see docs/rust-cst-extension-guide.md).
# Pure-Rust consumers omit pyo3 entirely by NOT enabling this feature.
[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310"], optional = true }

[features]
default = ["python"]
python = ["dep:pyo3"]
