[package]
name = "fltk-cst-core"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
name = "fltk_cst_core"
crate-type = ["rlib"]

# `python` feature (default-on): activates pyo3 linkage, #[pyclass]/#[pymethods], and
# cross-cdylib helpers. Downstream cdylib crates depend with `default-features = false`
# and re-enable via a forwarding feature (see docs/rust-cst-extension-guide.md).
# Pure-Rust consumers omit pyo3 entirely by NOT enabling this feature.
[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py310"], optional = true }

[features]
default = ["python"]
python = ["dep:pyo3"]
# test-introspection: enables registry introspection helpers (snapshot) for test fixture crates.
# Never enable in production extensions — test-only plumbing.
test-introspection = ["python"]
