load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "fltk-parser-core",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "fltk_parser_core",
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/fltk-cst-core",
        "@fltk_crates//:regex-automata",
    ],
)
