# This is a standalone crate intentionally excluded from the root workspace.
# It builds as a separate maturin extension (see Makefile build-fegen-rust-cst).
[workspace]

[package]
name = "fegen-rust-cst"
version = "0.1.0"
edition = "2021"

[lib]
name = "fegen_rust_cst"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310"] }
fltk-cst-core = { path = "../../crates/fltk-cst-core", default-features = false }
